kubernetes/services.yml
apiVersion: v1
kind: Service
metadata:
  name: multi-region-gke-app-service
spec:
  selector:
    app: multi-region-gke-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
